--- a/pom.xml
+++ b/pom.xml
@@ -31,19 +31,21 @@
 				<extensions>true</extensions>
 				<configuration>
    					<cloudHubDeployment>
-      					<uri>https://anypoint.mulesoft.com</uri>
-            			<muleVersion>${app.runtime}</muleVersion>
-      					<username>${username}</username>
-      					<password>${password}</password>
-      					<applicationName>${cloudhub.application.name}</applicationName>
-     					<environment>${environment}</environment>
-    					<region>${region}</region>
-    			  		<workers>${workers}</workers>
-      					<workerType>${workerType}</workerType>
-      					<properties>
-      						<key>value</key>
-     					</properties>
-    				</cloudHubDeployment>
+      <uri>https://anypoint.mulesoft.com</uri>
+      <muleVersion>${mule.version}</muleVersion>
+	  
+      <username>${anypoint.username}</username>
+      <password>${anypoint.password}</password>
+	  
+      <applicationName>${appname}</applicationName>
+      <environment>${env}</environment>
+	  
+	  <businessgroup>${business}</businessgroup>
+      	  
+      <workers>${workers}</workers>
+      <workerType>${vcore}</workerType>
+      <objectStoreV2>true</objectStoreV2>
+    </cloudHubDeployment>
   				</configuration>
 			</plugin>
 		</plugins>
